SBVTestSuite/TestSuite/CompileTests/PCase/PCase34.stderr
PCase34.hs:13:14: error: [GHC-39584]
    " PCase34.hs:16:9: pCase: Wildcard makes the remaining matches redundant:
        PCase34.hs:17:9: _

    " In the quasi-quotation:
        [pCase|Expr e of
        Zero  -> undefined
        Num _ -> undefined
        _     -> undefined
        _     -> undefined
      |]
   |
13 | t e = [pCase|Expr e of
   |              ^^^^^^^^^...

